# Cube_Jump

./: Cargo.toml  LICENSE  README.md
assets/: Rubik's Cube.glb
src/: camera.rs  main.rs  player.rs  world.rs
